<resources>
    <string name="app_name">BlogApp</string>
    
    <!-- Welcome Screen -->
    <string name="welcome_title">Welcome to BlogApp</string>
    <string name="welcome_subtitle">Discover amazing stories and share your thoughts</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_get_started">Get Started</string>
    
    <!-- Auth Screens -->
    <string name="login_title">Login to Your Account</string>
    <string name="register_title">Create New Account</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have account? Login</string>
    
    <!-- Home Screen -->
    <string name="home_title">Latest Articles</string>
    <string name="search_hint">Search articles...</string>
    <string name="no_articles">No articles found</string>
    
    <!-- Profile Screen -->
    <string name="profile_title">Profile</string>
    <string name="my_articles">My Articles</string>
    <string name="add_article">Add New Article</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    
    <!-- Article -->
    <string name="article_title_hint">Article Title</string>
    <string name="article_content_hint">Write your article content...</string>
    <string name="publish_article">Publish Article</string>
    <string name="save_draft">Save as Draft</string>
    
    <!-- Common -->
    <string name="loading">Loading...</string>
    <string name="error_occurred">An error occurred</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>